--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"@skeletonlabs/skeleton": "^3.0.0-next.9",
 		"@skeletonlabs/skeleton-svelte": "^1.0.0-next.13",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
@@ -39,8 +38,15 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.9.4",
+		"@sveltejs/kit": "^2.8.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"drizzle-orm": "^0.33.0"
+		"@vincjo/datatables": "^2.0.5",
+		"drizzle-orm": "^0.33.0",
+		"lucide-svelte": "^0.460.1",
+		"mongodb": "^6.10.0",
+		"plaid": "^30.0.0",
+		"sveltekit-adapter-deno": "^0.16.1",
+		"winston": "^3.17.0"
 	}
 }
