--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"jsdoc": "^4.0.4",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -42,6 +43,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vincjo/datatables": "^2.0.5",
+		"csv-parse": "^5.5.6",
 		"drizzle-orm": "^0.33.0",
 		"lucide-svelte": "^0.460.1",
 		"mongodb": "^6.10.0",
