--- a/deno.json
+++ b/deno.json
@@ -1,2 +1,14 @@
 {
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.8",
+    "@std/testing": "jsr:@std/testing@^1.0.5"
+  },
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "strict": true
+  }
 }
