--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@skeletonlabs/skeleton": "^3.0.0-next.9",
 		"@skeletonlabs/skeleton-svelte": "^1.0.0-next.13",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
