--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"lint": "prettier --check . && eslint .",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"test:unit": "vitest",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "^3.0.0-next.9",
@@ -37,7 +39,8 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vitest": "^2.0.4"
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.9.4",
