--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/adapter-vercel": "^5.4.7",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/bcrypt": "^5.0.2",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
 		"drizzle-kit": "^0.22.0",
@@ -44,11 +45,13 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@auth/sveltekit": "^1.7.4",
 		"@neondatabase/serverless": "^0.9.4",
 		"@sveltejs/kit": "^2.8.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vincjo/datatables": "^2.0.5",
+		"bcrypt": "^5.1.1",
 		"csv-parse": "^5.5.6",
 		"drizzle-orm": "^0.33.0",
 		"lucide-svelte": "^0.460.1",
