--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
+		"moduleResolution": "bundler",
+		"types": ["@sveltejs/kit"]
 	},
-	"include": ["src"]
+	"include": ["src", "./.svelte-kit/ambient.d.ts"]
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
